// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Forms/Checkbox Desktop 1`] = `
<section>
  


  <style>
    
    .checkbox-example-container &gt; fieldset {
        max-width: 100%;
    }

  </style>
  


  <fieldset
    class="fd-fieldset"
  >
    
    
    <legend
      class="fd-fieldset__legend"
    >
      Desktop (compact) checkboxes
    </legend>
    
    
    <div
      class="fd-form-group"
    >
      
        
      <div
        class="fd-form-item"
      >
        
            
        <input
          class="fd-checkbox fd-checkbox--compact"
          id="Ai4ez611c"
          type="checkbox"
        />
        
            
        <label
          class="fd-checkbox__label fd-checkbox__label--compact"
          for="Ai4ez611c"
        >
          
                
          <span
            class="fd-checkbox__text"
          >
            Apple
          </span>
          
            
        </label>
        
        
      </div>
      
        
      <div
        class="fd-form-item"
      >
        
            
        <input
          checked=""
          class="fd-checkbox fd-checkbox--compact"
          id="Ai4ez612c"
          type="checkbox"
        />
        
            
        <label
          class="fd-checkbox__label fd-checkbox__label--compact"
          for="Ai4ez612c"
        >
          
                
          <span
            class="fd-checkbox__text"
          >
            Banana
          </span>
          
            
        </label>
        
        
      </div>
      
        
      <div
        class="fd-form-item"
      >
        
            
        <input
          class="fd-checkbox fd-checkbox--compact"
          disabled=""
          id="Ai4ez622c"
          type="checkbox"
        />
        
            
        <label
          class="fd-checkbox__label fd-checkbox__label--compact"
          for="Ai4ez622c"
        >
          
                
          <span
            class="fd-checkbox__text"
          >
            Kiwi
          </span>
          
            
        </label>
        
        
      </div>
      
        
      <div
        class="fd-form-item"
      >
        
            
        <input
          checked=""
          class="fd-checkbox fd-checkbox--compact"
          disabled=""
          id="Ai4ez632c"
          type="checkbox"
        />
        
            
        <label
          class="fd-checkbox__label fd-checkbox__label--compact"
          for="Ai4ez632c"
        >
          
                
          <span
            class="fd-checkbox__text"
          >
            Lemon
          </span>
          
            
        </label>
        
        
      </div>
      
        
      <div
        class="fd-form-item"
      >
        
            
        <input
          class="fd-checkbox fd-checkbox--compact"
          id="Ai4ez613c"
          type="checkbox"
        />
        
            
        <label
          class="fd-checkbox__label fd-checkbox__label--compact"
          for="Ai4ez613c"
        >
          
                
          <span
            class="fd-checkbox__text"
          >
            All Fruits (TriState)
          </span>
          
            
        </label>
        
        
      </div>
      
        
      <div
        class="fd-form-item"
      >
        
            
        <input
          class="fd-checkbox fd-checkbox--compact"
          disabled=""
          id="Ai4ez643c"
          type="checkbox"
        />
        
            
        <label
          class="fd-checkbox__label fd-checkbox__label--compact"
          for="Ai4ez643c"
        >
          
                
          <span
            class="fd-checkbox__text"
          >
            All Fruits (TriState)
          </span>
          
            
        </label>
        
        
      </div>
      
    
    </div>
    

  </fieldset>
  

</section>
`;

exports[`Storyshots Components/Forms/Checkbox Inline 1`] = `
<fieldset
  class="fd-fieldset"
>
  
    
  <legend
    class="fd-fieldset__legend"
  >
    Inline checkboxes
  </legend>
  
    
  <div
    class="fd-form-group fd-form-group--inline"
  >
    
        
    <div
      class="fd-form-group__item fd-form-item"
    >
      
            
      <input
        class="fd-checkbox"
        id="Ai4ez617"
        type="checkbox"
      />
      
            
      <label
        class="fd-checkbox__label"
        for="Ai4ez617"
      >
        
                
        <span
          class="fd-checkbox__text"
        >
          Potatoes
        </span>
        
            
      </label>
      
        
    </div>
    
        
    <div
      class="fd-form-group__item fd-form-item"
    >
      
            
      <input
        checked=""
        class="fd-checkbox"
        id="Ai4ez618"
        type="checkbox"
      />
      
            
      <label
        class="fd-checkbox__label"
        for="Ai4ez618"
      >
        
                
        <span
          class="fd-checkbox__text"
        >
          Tomatoes
        </span>
        
            
      </label>
      
        
    </div>
    
        
    <div
      class="fd-form-group__item fd-form-item"
    >
      
            
      <input
        checked=""
        class="fd-checkbox"
        disabled=""
        id="Ai4ez619"
        type="checkbox"
      />
      
            
      <label
        class="fd-checkbox__label"
        for="Ai4ez619"
      >
        
                
        <span
          class="fd-checkbox__text"
        >
          Carrots
        </span>
        
            
      </label>
      
        
    </div>
    
    
  </div>
  

</fieldset>
`;

exports[`Storyshots Components/Forms/Checkbox Mobile 1`] = `
<section>
  


  <style>
    
    .checkbox-example-container &gt; fieldset {
        max-width: 100%;
    }

  </style>
  


  <fieldset
    class="fd-fieldset"
  >
    
    
    <legend
      class="fd-fieldset__legend"
    >
      Mobile checkboxes
    </legend>
    
    
    <div
      class="fd-form-group"
    >
      
        
      <div
        class="fd-form-item"
      >
        
            
        <input
          class="fd-checkbox"
          id="Ai4ez611"
          type="checkbox"
        />
        
            
        <label
          class="fd-checkbox__label"
          for="Ai4ez611"
        >
          
                
          <span
            class="fd-checkbox__text"
          >
            Apple
          </span>
          
            
        </label>
        
        
      </div>
      
        
      <div
        class="fd-form-item"
      >
        
            
        <input
          checked=""
          class="fd-checkbox"
          id="Ai4ez612"
          type="checkbox"
        />
        
            
        <label
          class="fd-checkbox__label"
          for="Ai4ez612"
        >
          
                
          <span
            class="fd-checkbox__text"
          >
            Banana
          </span>
          
            
        </label>
        
        
      </div>
      
        
      <div
        class="fd-form-item"
      >
        
            
        <input
          class="fd-checkbox"
          disabled=""
          id="Ai4ez622"
          type="checkbox"
        />
        
            
        <label
          class="fd-checkbox__label"
          for="Ai4ez622"
        >
          
                
          <span
            class="fd-checkbox__text"
          >
            Kiwi
          </span>
          
            
        </label>
        
        
      </div>
      
        
      <div
        class="fd-form-item"
      >
        
            
        <input
          checked=""
          class="fd-checkbox"
          disabled=""
          id="Ai4ez632"
          type="checkbox"
        />
        
            
        <label
          class="fd-checkbox__label"
          for="Ai4ez632"
        >
          
                
          <span
            class="fd-checkbox__text"
          >
            Lemon
          </span>
          
            
        </label>
        
        
      </div>
      
        
      <div
        class="fd-form-item"
      >
        
            
        <input
          class="fd-checkbox"
          id="Ai4ez613"
          type="checkbox"
        />
        
            
        <label
          class="fd-checkbox__label"
          for="Ai4ez613"
        >
          
                
          <span
            class="fd-checkbox__text"
          >
            All Fruits (TriState)
          </span>
          
            
        </label>
        
        
      </div>
      
        
      <div
        class="fd-form-item"
      >
        
            
        <input
          class="fd-checkbox"
          disabled=""
          id="Ai4ez643"
          type="checkbox"
        />
        
            
        <label
          class="fd-checkbox__label"
          for="Ai4ez643"
        >
          
                
          <span
            class="fd-checkbox__text"
          >
            All Fruits (TriState)
          </span>
          
            
        </label>
        
        
      </div>
      
    
    </div>
    

  </fieldset>
  

</section>
`;

exports[`Storyshots Components/Forms/Checkbox States 1`] = `
<section>
  


  <style>
    
    .checkbox-example-container &gt; fieldset {
        max-width: 100%;
    }

  </style>
  


  <div
    class="checkbox-example-container"
  >
    
    
    <fieldset
      class="fd-fieldset"
    >
      
        
      <legend
        class="fd-fieldset__legend"
      >
        Error checkboxes
      </legend>
      
        
      <div
        class="fd-form-group"
      >
        
            
        <div
          class="fd-form-item"
        >
          
                
          <input
            class="fd-checkbox is-error"
            id="Ai4ez6119"
            type="checkbox"
          />
          
                
          <label
            class="fd-checkbox__label"
            for="Ai4ez6119"
          >
            
                    
            <span
              class="fd-checkbox__text"
            >
              Text Option
            </span>
            
                
          </label>
          
            
        </div>
        
            
        <div
          class="fd-form-item"
        >
          
                
          <input
            checked=""
            class="fd-checkbox is-error"
            id="Ai4ez6129"
            type="checkbox"
          />
          
                
          <label
            class="fd-checkbox__label"
            for="Ai4ez6129"
          >
            
                    
            <span
              class="fd-checkbox__text"
            >
              Selected State
            </span>
            
                
          </label>
          
            
        </div>
        
            
        <div
          class="fd-form-item"
        >
          
                
          <input
            class="fd-checkbox is-error"
            id="Ai4ez613i1"
            type="checkbox"
          />
          
                
          <label
            class="fd-checkbox__label"
            for="Ai4ez613i1"
          >
            
                    
            <span
              class="fd-checkbox__text"
            >
              TriState Text
            </span>
            
                
          </label>
          
            
        </div>
        
        
      </div>
      
    
    </fieldset>
    

    
    <fieldset
      class="fd-fieldset"
    >
      
        
      <legend
        class="fd-fieldset__legend"
      >
        Success checkboxes
      </legend>
      
        
      <div
        class="fd-form-group"
      >
        
            
        <div
          class="fd-form-item"
        >
          
                
          <input
            class="fd-checkbox is-success"
            id="Ai4ez61192"
            type="checkbox"
          />
          
                
          <label
            class="fd-checkbox__label"
            for="Ai4ez61192"
          >
            
                    
            <span
              class="fd-checkbox__text"
            >
              Text Option
            </span>
            
                
          </label>
          
            
        </div>
        
            
        <div
          class="fd-form-item"
        >
          
                
          <input
            checked=""
            class="fd-checkbox is-success"
            id="Ai4ez61292"
            type="checkbox"
          />
          
                
          <label
            class="fd-checkbox__label"
            for="Ai4ez61292"
          >
            
                    
            <span
              class="fd-checkbox__text"
            >
              Selected State
            </span>
            
                
          </label>
          
            
        </div>
        
            
        <div
          class="fd-form-item"
        >
          
                
          <input
            class="fd-checkbox is-success"
            id="Ai4ez613i2"
            type="checkbox"
          />
          
                
          <label
            class="fd-checkbox__label"
            for="Ai4ez613i2"
          >
            
                    
            <span
              class="fd-checkbox__text"
            >
              TriState Text
            </span>
            
                
          </label>
          
            
        </div>
        
        
      </div>
      
    
    </fieldset>
    

    
    <fieldset
      class="fd-fieldset"
    >
      
        
      <legend
        class="fd-fieldset__legend"
      >
        Warning checkboxes
      </legend>
      
        
      <div
        class="fd-form-group"
      >
        
            
        <div
          class="fd-form-item"
        >
          
                
          <input
            class="fd-checkbox is-warning"
            id="Ai4ez61193"
            type="checkbox"
          />
          
                
          <label
            class="fd-checkbox__label"
            for="Ai4ez61193"
          >
            
                    
            <span
              class="fd-checkbox__text"
            >
              Text Option
            </span>
            
                
          </label>
          
            
        </div>
        
            
        <div
          class="fd-form-item"
        >
          
                
          <input
            checked=""
            class="fd-checkbox is-warning"
            id="Ai4ez61293"
            type="checkbox"
          />
          
                
          <label
            class="fd-checkbox__label"
            for="Ai4ez61293"
          >
            
                    
            <span
              class="fd-checkbox__text"
            >
              Selected State
            </span>
            
                
          </label>
          
            
        </div>
        
            
        <div
          class="fd-form-item"
        >
          
                
          <input
            class="fd-checkbox is-warning"
            id="Ai4ez613i3"
            type="checkbox"
          />
          
                
          <label
            class="fd-checkbox__label"
            for="Ai4ez613i3"
          >
            
                    
            <span
              class="fd-checkbox__text"
            >
              TriState Text
            </span>
            
                
          </label>
          
            
        </div>
        
        
      </div>
      
    
    </fieldset>
    

    
    <fieldset
      class="fd-fieldset"
    >
      
        
      <legend
        class="fd-fieldset__legend"
      >
        Information checkboxes
      </legend>
      
        
      <div
        class="fd-form-group"
      >
        
            
        <div
          class="fd-form-item"
        >
          
                
          <input
            class="fd-checkbox is-information"
            id="Ai4ez61194"
            type="checkbox"
          />
          
                
          <label
            class="fd-checkbox__label"
            for="Ai4ez61194"
          >
            
                    
            <span
              class="fd-checkbox__text"
            >
              Text Option
            </span>
            
                
          </label>
          
            
        </div>
        
            
        <div
          class="fd-form-item"
        >
          
                
          <input
            checked=""
            class="fd-checkbox is-information"
            id="Ai4ez61294"
            type="checkbox"
          />
          
                
          <label
            class="fd-checkbox__label"
            for="Ai4ez61294"
          >
            
                    
            <span
              class="fd-checkbox__text"
            >
              Selected State
            </span>
            
                
          </label>
          
            
        </div>
        
            
        <div
          class="fd-form-item"
        >
          
                
          <input
            class="fd-checkbox is-information"
            id="Ai4ez613i4"
            type="checkbox"
          />
          
                
          <label
            class="fd-checkbox__label"
            for="Ai4ez613i4"
          >
            
                    
            <span
              class="fd-checkbox__text"
            >
              TriState Text
            </span>
            
                
          </label>
          
            
        </div>
        
        
      </div>
      
    
    </fieldset>
    

    
    <fieldset
      class="fd-fieldset"
    >
      
        
      <legend
        class="fd-fieldset__legend"
      >
        Disabled checkboxes
      </legend>
      
        
      <div
        class="fd-form-group"
      >
        
            
        <div
          class="fd-form-item"
        >
          
                
          <input
            class="fd-checkbox"
            disabled=""
            id="Ai4ez61196"
            type="checkbox"
          />
          
                
          <label
            class="fd-checkbox__label"
            for="Ai4ez61196"
          >
            
                    
            <span
              class="fd-checkbox__text"
            >
              Text Option
            </span>
            
                
          </label>
          
            
        </div>
        
            
        <div
          class="fd-form-item"
        >
          
                
          <input
            checked=""
            class="fd-checkbox"
            disabled=""
            id="Ai4ez61296"
            type="checkbox"
          />
          
                
          <label
            class="fd-checkbox__label"
            for="Ai4ez61296"
          >
            
                    
            <span
              class="fd-checkbox__text"
            >
              Selected State
            </span>
            
                
          </label>
          
            
        </div>
        
            
        <div
          class="fd-form-item"
        >
          
                
          <input
            class="fd-checkbox"
            disabled=""
            id="Ai4ez613i6"
            type="checkbox"
          />
          
                
          <label
            class="fd-checkbox__label"
            for="Ai4ez613i6"
          >
            
                    
            <span
              class="fd-checkbox__text"
            >
              TriState Text
            </span>
            
                
          </label>
          
            
        </div>
        
        
      </div>
      
    
    </fieldset>
    

  </div>
  

</section>
`;
